INFRA-627 - add changes from vojko to amqp generator plugin